--- a/并查集.md
+++ b/并查集.md
@@ -64,8 +64,9 @@ class UnionFind
       vector<int> parent;   //存储根节点的位置
       vector<int> size;     //用于计算以节点i为代表的集群大小，方便优化
       int n;                //节点个数    
+      int set_count         //连通分量个数
     public:
-      UnionFind(int _n):n(_n),parent(_n),size(_n,1)
+      UnionFind(int _n):n(_n),set_count(_n),parent(_n),size(_n,1)
       {
            iota(parent.begin(), parent.end(), 0);//将parent从begin()到end()初始化为0
       }
@@ -81,6 +82,9 @@ class UnionFind
         y=findparent(y);
         if(x==y)return false;          //说明在同一个集合中
         if(size[x]<size[y]) swap(x,y); //小集和向大集合合并
+        parent[y] = x;
+        size[x] += size[y];
+        --setCount;
         return true;
      }
     //查询
